--- a/package.json
+++ b/package.json
@@ -1,60 +1,45 @@
 {
-  "name": "campus-deicee",
+  "name": "project",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --host",
-    "build": "tsc --skipLibCheck && vite build",
-    "analyze": "vite-bundle-analyzer",
+    "dev": "vite",
+    "build": "tsc && vite build", 
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
     "@11labs/client": "^0.0.7",
     "@supabase/auth-ui-react": "^0.4.7",
-    "@supabase/auth-ui-shared": "^0.1.8",
-    "@supabase/supabase-js": "^2.39.7",
+    "@supabase/supabase-js": "^2.39.3",
+    "@stripe/react-stripe-js": "^2.4.0",
+    "@stripe/stripe-js": "^2.4.0",
     "@tinymce/tinymce-react": "^4.3.2",
-    "@tiptap/core": "^2.1.16",
-    "@tiptap/extension-bullet-list": "^2.1.16",
-    "@tiptap/extension-heading": "^2.1.16",
-    "@tiptap/extension-link": "^2.1.16",
-    "@tiptap/extension-list-item": "^2.1.16",
-    "@tiptap/pm": "^2.1.16",
-    "@tiptap/react": "^2.1.16",
-    "@tiptap/starter-kit": "^2.1.16",
-    "lucide-react": "^0.344.0",
+    "lucide-react": "^0.363.0",
     "maplibre-gl": "^3.6.2",
     "openai": "^4.28.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
-    "react-hotkeys-hook": "^4.5.0",
     "react-map-gl": "^7.1.7",
-    "react-router-dom": "^6.22.1",
-    "tinymce": "^6.8.3",
+    "react-router-dom": "^6.22.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@types/dompurify": "^3.0.5",
-    "@types/react": "^18.2.55",
-    "@types/react-beautiful-dnd": "^13.1.8",
-    "@types/react-dom": "^18.2.19",
-    "@types/uuid": "^9.0.8",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
+    "@types/react": "^18.2.43",
+    "@types/react-dom": "^18.2.17",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.17",
-    "eslint": "^8.56.0",
+    "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "postcss": "^8.4.35",
+    "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
-    "terser": "^5.39.0",
-    "typescript": "^5.3.3",
-    "vite": "^5.1.1",
-    "vite-bundle-analyzer": "^0.9.4",
+    "typescript": "^5.2.2",
+    "vite": "^5.0.8",
     "vite-plugin-pwa": "^0.17.5"
   }
 }
